--- a/html/css/base.css
+++ b/html/css/base.css
@@ -448,6 +448,20 @@ table {
 
 }
 
+.banner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 10px;
+  text-align: center;
+  font-size: 16px;
+  display: none;
+  z-index: 99999;
+}
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
