--- a/html/css/base.css
+++ b/html/css/base.css
@@ -452,14 +452,15 @@ table {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 50%;
   background-color: #000000;
   color: #ffffff;
   padding: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 16px;
   display: none;
   z-index: 99999;
+  margin: auto;
 }
 
 @-webkit-keyframes spin {
