--- a/html/css/screen.css
+++ b/html/css/screen.css
@@ -126,9 +126,6 @@ nav p {
   float: right;
 }
 
-#settings-footer {}
-
-
 /* Wizard*/
 #box {
   background-color: #444;
@@ -202,12 +199,6 @@ nav p {
   padding: 2px;
 }
 
-#activeStreams,
-#inactiveStreams {
-  /* width: 50%; */
-  /* float: left; */
-}
-
 #activeStreams .tdKey,
 #inactiveStreams .tdKey {
   width: 115px;
@@ -254,23 +245,23 @@ caption {
   overflow-y: scroll;
 }
 
-#content_table,
-#inactive_content_table,
+#contentTable,
+#inactiveContentTable,
 #mapping-detail-table,
-#content_table {
+#contentTable {
   display: table;
   --bs-table-color: none;
   border-collapse: collapse;
   overflow-y: scroll;
 }
 
-#inactive_content_table {
+#inactiveContentTable {
   margin-top: 2%;
 }
 
 
-#content_table .content_table_header,
-#inactive_content_table .inactive_content_table_header {
+#contentTable .contentTableHeader,
+#inactiveContentTable .inactiveContentTableHeader {
   background-color: #333;
   height: 50px;
   border-bottom: solid 1px #111;
@@ -292,34 +283,34 @@ tbody {
   white-space: nowrap;
 }
 
-#content_table img,
-#inactive_content_table img {
+#contentTable img,
+#inactiveContentTable img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-width: 60px;
 }
 
-#content_table tr,
-#inactive_content_table tr {
+#contentTable tr,
+#inactiveContentTable tr {
   border-left: solid 3px 444;
   border-bottom: solid 1px #333;
   cursor: pointer;
 }
 
-#content_table tr:hover,
-#inactive_content_table tr:hover {
+#contentTable tr:hover,
+#inactiveContentTable tr:hover {
   background-color: #333;
 }
 
-#content_table td,
-#inactive_content_table td {
+#contentTable td,
+#inactiveContentTable td {
 
   padding: 0px 2px;
 }
 
-#content_table input[type=text],
-#inactive_content_table input[type=text] {
+#contentTable input[type=text],
+#inactiveContentTable input[type=text] {
   width: 80%;
   min-width: 35px;
   max-width: 60px;
@@ -329,8 +320,8 @@ tbody {
   text-align: left;
 }
 
-#content_table input[type=checkbox],
-#inactive_content_table input[type=checkbox] {
+#contentTable input[type=checkbox],
+#inactiveContentTable input[type=checkbox] {
   max-width: 25px;
   margin: auto;
 }
@@ -344,15 +335,13 @@ tbody {
   display: none;
 }
 
-.noBulk {}
-
-#content_table tr.activeEPG,
-#inactive_content_table tr.activeEPG {
+#contentTable tr.activeEPG,
+#inactiveContentTable tr.activeEPG {
   border-left: solid 3px lawngreen;
 }
 
-#content_table tr.notActiveEPG,
-#inactive_content_table tr.notActiveEPG {
+#contentTable tr.notActiveEPG,
+#inactiveContentTable tr.notActiveEPG {
   border-left: solid 3px red;
 }
 
@@ -548,10 +537,16 @@ tbody {
     display: flex;
     flex-direction: column;
   }
-
-  #settings,
-  #settings-footer {}
 }
+
+@media only screen and (max-width: 620px) {
+  body {
+    background-color: #444; /* Ensure the background color is consistent */
+  }
+
+  /* Add any other styles specific to small devices here */
+}
+
 
 /*
 =============== 
@@ -720,11 +715,6 @@ Sidebar
 }
 .show-sidebar .close-btn {
   display: block;
-}
-@media screen and (min-width: 676px) {
-  .sidebar {
-    width: 1000px;
-  }
 }
 
 .sidebar .card {
