--- a/html/css/base.css
+++ b/html/css/base.css
@@ -1,4 +1,4 @@
-* {
+*{
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
@@ -126,6 +126,7 @@ select {
   background-color: #333;
   font-size: 14px;
   margin: 5px 0px 5px 0px;
+  padding-bottom: 50px;
 }
 
 select:focus {
@@ -461,6 +462,27 @@ table {
   display: none;
   z-index: 99999;
   margin: auto;
+}
+
+.container-fluid {
+    flex: 1;
+    padding-bottom: 25px; /* Adjust this value based on the height of your footer */
+}
+
+.footer-banner {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px; /* Adjust padding as needed */
+  position: fixed;
+  bottom: 20px; /* Adjust position as needed */
+  right: 20px; /* Adjust position as needed */
+  z-index: 1000;
+  display: none; /* Initially hidden */
+  width: 300px; /* Adjust width as needed */
+  height: 130px; /* Adjust height as needed */
+  border-radius: 10px; /* Optional: rounded corners */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Optional: add shadow for better visibility */
 }
 
 @-webkit-keyframes spin {
