Update the appearance
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -71,7 +71,8 @@ h5 {
   font-size: 16px;
   letter-spacing: 1px;
   line-height: 1.2em;
-  margin: 25px 0px 10px 0px;
+  margin: 0px auto;
+  margin-left: 10px;
 }
 
 hr {
@@ -449,26 +450,6 @@ table {
 
 }
 
-.banner {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 50%;
-  background-color: #000000;
-  color: #ffffff;
-  padding: 10px;
-  text-align: left;
-  font-size: 16px;
-  display: none;
-  z-index: 99999;
-  margin: auto;
-}
-
-.container-fluid {
-    flex: 1;
-    padding-bottom: 25px; /* Adjust this value based on the height of your footer */
-}
-
 .footer-banner {
   background-color: #333;
   color: #fff;
@@ -483,6 +464,12 @@ table {
   height: 130px; /* Adjust height as needed */
   border-radius: 10px; /* Optional: rounded corners */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Optional: add shadow for better visibility */
+}
+
+.footer-banner .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @-webkit-keyframes spin {
