50 auto reconnect to stream (#58)
* Improve the handling of the buffer/stream by adding some params to the struct, adapt the appearance of the update notification
* Use constants for error codes
* Enhance the buffer again
* Move frontend code to the web folder
* Add german language
* Now autoreconnect can be used, update the web client

Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/web/public/css/base.css
+++ b/web/public/css/base.css
@@ -450,7 +450,7 @@ table {
 
 }
 
-.footer-banner {
+.notification {
   background-color: #333;
   color: #fff;
   text-align: center;
@@ -461,15 +461,21 @@ table {
   z-index: 1000;
   display: none; /* Initially hidden */
   width: 300px; /* Adjust width as needed */
-  height: 130px; /* Adjust height as needed */
+  max-height: calc(80vh - 10px); /* Adjust height as needed */
   border-radius: 10px; /* Optional: rounded corners */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Optional: add shadow for better visibility */
 }
 
-.footer-banner .header {
+.notification .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.notification .content {
+  flex-grow: 1; /* Allow content to grow and take available space */
+  overflow-y: auto; /* Enable vertical scrolling if content overflows */
+  margin-bottom: 10px; /* Ensure there's a gap to the bottom */
 }
 
 @-webkit-keyframes spin {
