--- a/web/public/css/base.css
+++ b/web/public/css/base.css
@@ -479,6 +479,24 @@ table {
   margin-bottom: 10px; /* Ensure there's a gap to the bottom */
 }
 
+#backToTop {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 50px; /* Place the button at the bottom of the page */
+  right: 50px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #000;
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 5px 10px 10px 10px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+}
+
+#backToTop:hover {
+  background-color: #00E6FF; /* Add a dark-grey background on hover */
+}
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
