--- a/web/public/css/screen.css
+++ b/web/public/css/screen.css
@@ -14,6 +14,12 @@ nav p {
   display: block;
   height: 100%;
 }
+/*
+.form-control {
+  background-color: #444;
+  color: #FFF;
+  pointer-events: none;
+}*/
 
 .form-control:disabled {
   background-color: transparent;
@@ -320,11 +326,13 @@ tbody {
   text-align: left;
 }
 
+/*
 #contentTable input[type=checkbox],
 #inactiveContentTable input[type=checkbox] {
   max-width: 25px;
   margin: auto;
 }
+*/
 
 
 .showBulk {
